# ai-agent-feasibility-study-V2

./: .gitignore  README.md
.claude/: settings.local.json
duckdb_client/: .gitignore  README.md  pyproject.toml
duckdb_client/src/duckdb_client/: __init__.py  cli.py  client.py
studio_team/configs/: judgment.toml  prompt_builder.toml  search_news.toml  search_news_multi_perspective.toml
studio_team/configs/agents/: team_academic_researcher.toml  team_general_researcher.toml  team_sns_researcher.toml
studio_team/configs/evaluators/: evaluator_search_news.toml
studio_team/configs/judgment/: judgment_search_news.toml
studio_team/logs/: .gitkeep
